--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ body {
 .container {
     background-color: #f8f8f8;
     display: flex;
+    margin-top: 8%;
     justify-content: space-between;
     align-items: center;
     padding: 3%;
